# ai-dev-scaffold

./: .gitignore  README.md  pyproject.toml
docs/: GUIDE.md
scaffold/: __init__.py  cli.py  generator.py  git.py  presets.py
scaffold/templates/: CLAUDE.md.tpl  README.md.tpl  gitignore.tpl  pre-commit-config.yaml.tpl
scaffold/templates/ai/claude/: settings.json.tpl
scaffold/templates/ai/claude/agents/: qa.md.tpl
scaffold/templates/ai/cursor/: cursorrules.tpl
scaffold/templates/ai/windsurf/: windsurfrules.tpl
scaffold/templates/docs/: ARCHITECTURE.md.tpl  EVALS.md.tpl  KICKOFF_PROMPT.md.tpl  OWNER_TODO.md.tpl  PLAN.md.tpl  PRD.md.tpl  VERIFICATION.md.tpl
scaffold/templates/scripts/: verify-node-react.sh.tpl  verify-node.sh.tpl  verify-python-react.sh.tpl  verify-python.sh.tpl
