[project]
name = "ai-dev-scaffold"
version = "0.1.0"
description = "Scaffold disciplined AI-assisted development projects — documents, enforcement, verification."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ai-scaffold = "scaffold.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
